		onTextEdit creature event (slawkens)
		Turn click (aka CTRL + key) teleportation (slawkens, Kiper)
		New configurables: ghostModeInvisibleEffect, gainExperienceColor, checkCorpseOwner, showHealingDamageForMonsters (slawkens)
		Moved items randomization to randomization.xml file (slawkens, Elf)
		Furniture beds (packages with beds) + enchanting system (slawkens)
	]
]

[ Deprecated
	[ NOTE
		All deprecated Lua functions are stored in compat.lua and use their equivalents, nevertheless please use proper ones for new scripts.
	]

	[ 0.3.1
		LuaFunction: savePlayers(), use saveData().
		LuaFunction: doPlayerAddMana(cid, mana), use doCreatureAddMana(cid, mana)
		LuaFunction: broadcastMessage(cid, type), use doBroadcastMessage(cid, type)
		LuaFunction: getPlayerPosition(cid), use getCreaturePosition(cid)
		LuaFunction: getPlayerName(cid), use getCreatureName(cid)
		LuaFunction: getCreaturePos(cid) [fake], use getCreaturePosition(cid)
		LuaFunction: saveData(), use saveServer()
		LuaFunction: doPlayerRemovePremiumDays(cid, days), use: doPlayerAddPremiumDays(cid, -days) [negative values]
		LuaFunction: doPlayerRemOutfit(cid, looktype, addons), use: doPlayerRemoveOutfit(cid, looktype, addons)
		LuaFunction: doSetCreatureDropLoot(cid, doDrop), use: doCreatureSetDropLoot(cid, doDrop)
		LuaFunction: doPlayerAddManaSpent(cid, mana), use: doPlayerAddSpentMana(cid, amount)
		LuaFunction: getPromotedVocation(vocId), use: getVocationInfo(id).promotedVocation
		LuaFunction: doPlayerAddExp(cid, exp), use: doPlayerAddExperience(cid, amount)

		... and many, many more.
	]
	[ 0.3.2
		Player and Global storages do not use -1 as eraser anymore, use 'nil' value
		onDeath corpse passed parameter is now Thing (table with entries: uid, itemid, etc) instead lonely uid
		house_storage database table, house_data is now used
		Items attribute: preventLoss, use: preventDrop
	]
	[ 0.3.3
		LuaFunction: doPlayerSetExperienceRate, doPlayerSetMagicRate, use: doPlayerSetRate(... __LEVEL/__MAGLEVEL ...)