@@ -5,19 +5,19 @@
 #define THEFORGOTTENSERVER_PRIVATE_H
 
 /* VERSION DEFINITIONS */
-#define VER_STRING	"0.3.3.1523"
+#define VER_STRING	"0.3.4.1756"
 #define VER_MAJOR	0
 #define VER_MINOR	3
-#define VER_RELEASE	3
-#define VER_BUILD	1523
+#define VER_RELEASE	4
+#define VER_BUILD	1756
 #define COMPANY_NAME	""
-#define FILE_VERSION	"0.3.3"
+#define FILE_VERSION	"0.3.4"
 #define FILE_DESCRIPTION	"The Forgotten Server"
 #define INTERNAL_NAME	"Crying Damson"
 #define LEGAL_COPYRIGHT	""
 #define LEGAL_TRADEMARKS	""
 #define ORIGINAL_FILENAME	"TheForgottenServer.exe"
 #define PRODUCT_NAME	"The Forgotten Server"
-#define PRODUCT_VERSION	"0.3.3"
+#define PRODUCT_VERSION	"0.3.4"
 
 #endif /*THEFORGOTTENSERVER_PRIVATE_H*/
