@@ -11,8 +11,8 @@ A ICON MOVEABLE PURE LOADONCALL DISCARDABLE "TheForgottenServer.ico"
 // TO CHANGE VERSION INFORMATION, EDIT PROJECT OPTIONS...
 //
 1 VERSIONINFO
-FILEVERSION 0,3,3,1523
-PRODUCTVERSION 0,3,3,1523
+FILEVERSION 0,3,4,1756
+PRODUCTVERSION 0,3,4,1756
 FILETYPE VFT_APP
 {
   BLOCK "StringFileInfo"
@@ -20,14 +20,14 @@ FILETYPE VFT_APP
 		 BLOCK "040904E4"
 		 {
 			 VALUE "CompanyName", ""
-			 VALUE "FileVersion", "0.3.3"
+			 VALUE "FileVersion", "0.3.4"
 			 VALUE "FileDescription", "The Forgotten Server"
 			 VALUE "InternalName", "Crying Damson"
 			 VALUE "LegalCopyright", ""
 			 VALUE "LegalTrademarks", ""
 			 VALUE "OriginalFilename", "TheForgottenServer.exe"
 			 VALUE "ProductName", "The Forgotten Server"
-			 VALUE "ProductVersion", "0.3.3"
+			 VALUE "ProductVersion", "0.3.4"
 		 }
 	 }
   BLOCK "VarFileInfo"
