@@ -16,11 +16,20 @@
 ]
 
 [ TASKS
-	Deprecate several hardcoded systems (guild management, experience stages, etc) and rescript them in Lua
-		Assigned to: Elf
+	Finish documentation as its incomplete
+		Assigned to: KaczooH
+
+	Modifications system
+		Assigned to: slawkens
+
+	Patch missing changes from OpenTibia SVN
+		Assigned to: Talaturen, Elf
 
 	Finish boost_thread support (Scheduler, Tasks, Main[?])
 		Assigned to: Elf
+
+	Deprecate several hardcoded systems (guild management, experience stages, etc) and rescript them in Lua
+		Assigned to: Elf, KaczooH, slawkens
 
 	Protocol HTTP
 		Assigned to: Talaturen
