@@ -63,6 +63,13 @@
 
 typedef HANDLE OTSYS_THREAD_SIGNALVAR;
 
+inline int64_t OTSYS_TIME()
+{
+	_timeb t;
+	_ftime(&t);
+	return ((int64_t)t.millitm) + ((int64_t)t.time) * 1000;
+}
+
 inline int OTSYS_THREAD_WAITSIGNAL(OTSYS_THREAD_SIGNALVAR& signal, OTSYS_THREAD_LOCKVAR& lock)
 {
 	//LeaveCriticalSection(&lock);
@@ -72,13 +79,6 @@ inline int OTSYS_THREAD_WAITSIGNAL(OTSYS_THREAD_SIGNALVAR& signal, OTSYS_THREAD_
 	OTSYS_THREAD_LOCK(lock, "OTSYS_THREAD_WAITSIGNAL");
 
 	return -0x4711;
-}
-
-inline int64_t OTSYS_TIME()
-{
-	_timeb t;
-	_ftime(&t);
-	return ((int64_t)t.millitm) + ((int64_t)t.time) * 1000;
 }
 
 inline int OTSYS_THREAD_WAITSIGNAL_TIMED(OTSYS_THREAD_SIGNALVAR& signal, OTSYS_THREAD_LOCKVAR& lock, int64_t cycle)
@@ -95,7 +95,6 @@ inline int OTSYS_THREAD_WAITSIGNAL_TIMED(OTSYS_THREAD_SIGNALVAR& signal, OTSYS_T
 
 	return ret;
 }
-
 #else
 #include <sys/types.h>
 #include <sys/socket.h>
