@@ -59,12 +59,12 @@
 #define CLIENT_VERSION_STRING "Only clients with protocol 8.41 or 8.42 allowed!"
 
 #define STATUS_SERVER_NAME "The Forgotten Server"
-#define STATUS_SERVER_VERSION "0.3.3"
+#define STATUS_SERVER_VERSION "0.3.4"
 #define STATUS_SERVER_CODENAME "Crying Damson"
 #define STATUS_SERVER_PROTOCOL "8.42"
 
 #define VERSION_CHECK "http://forgottenserver.otland.net/version.xml"
 #define VERSION_PATCH 0
-#define VERSION_TIMESTAMP 1239619445
-#define VERSION_BUILD 1523
+#define VERSION_TIMESTAMP 1241027446
+#define VERSION_BUILD 1756
 #define VERSION_DATABASE 13
