@@ -34,7 +34,7 @@ CREATE TABLE `server_config`
 	UNIQUE (`config`)
 ) ENGINE = InnoDB;
 
-INSERT INTO `server_config` VALUES ('db_version', 12);
+INSERT INTO `server_config` VALUES ('db_version', 13);
 
 CREATE TABLE `server_motd`
 (
